update-2 the index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My First Website</title>
 </head>
 <body>
-    <h1>Hello, Jenkins updated!</h1>
+    <h1>Hello, Jenkins update - 2!</h1>
     <p>This is my first website deployed using Jenkins.</p>
 </body>
 </html>
