--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My First Website - Successfully Deployed</title>
+    <h3>Day-2 Practice</h3>
 </head>
 <body>
     <h1>Hello Naveen, Jenkins update - 2!</h1>
